# swishxx

./: .gitignore  BUGS  ChangeLog  Changes  INSTALL.unix  Makefile.am  NEWS  README.Solaris  README.md  SearchResults.dtd  WWW.pm  configure.ac
SWISH++.xcodeproj/: project.pbxproj
config/: config-sh  init_mod_vars-sh  init_modules-sh
config/src/: errno.c  socklen_2_int.c
lib/: .gitignore  Makefile.am
lib/sys/: types.h
m4/: gnulib-cache.m4  gnulib-comp.m4
man/: Makefile.am
man/man1/: Makefile.am  extract.1  httpindex.1  index.1  search.1  splitmail.1
man/man3/: GNUmakefile
man/man4/: GNUmakefile  Makefile.am  swish++.conf.4  swish++.index.4
man/man8/: Makefile.am
misc/: SearchResults.dtd  SearchResults.xsd  WWW.pm  search.plist  swish++.conf
scripts/: httpindex.in  searchc  searchd  searchmonitor  splitmail
src/: .gitignore  AssociateMeta.h  ChangeDirectory.cpp  ChangeDirectory.h  ExcludeFile.cpp  ExcludeFile.h  ExcludeMeta.h  ExtractExtension.h  ExtractFile.cpp  ExtractFile.h  ExtractFilter.h  FilesGrow.h  FilesReserve.h  FilterFile.h  FollowLinks.h  Group.cpp  Group.h  IncludeFile.cpp  IncludeFile.h  IncludeMeta.cpp  IncludeMeta.h  Incremental.h  IndexFile.h  LaunchdCooperation.h  Makefile.am  PidFile.h  RecurseSubdirs.h  ResultSeparator.h  ResultsFormat.cpp  ResultsFormat.h  ResultsMax.h  SearchBackground.h  SearchDaemon.c  SearchDaemon.cpp  SearchDaemon.h  SocketAddress.cpp  SocketAddress.h  SocketFile.h  SocketQueueSize.h  SocketTimeout.h  (+107 more)
src/charsets/: GNUmakefile  Makefile.am  README.md  charsets.h  unicode.h  utf16.c  utf16.cpp  utf7.c  utf7.cpp  utf8.cpp
src/encodings/: Makefile.am  README.md  base64.cpp  encoded_word.cpp  encodings.h  quoted_printable.cpp
src/mod/: Makefile.am
src/mod/html/: ExcludeClass.h  Makefile.am  elements.c  elements.cpp  elements.h  entities.c  entities.cpp  entities.h  html_config.h  mod_html.c  mod_html.cpp  mod_html.h
src/mod/id3/: Makefile.am  id3v1.cpp  id3v1.h  id3v2.c  id3v2.cpp  id3v2.h  mod_id3.cpp  mod_id3.h
src/mod/latex/: Makefile.am  commands.cpp  commands.h  latex_config.h  mod_latex.cpp  mod_latex.h
src/mod/mail/: FilterAttachment.h  Makefile.am  mod_mail.c  mod_mail.cpp  mod_mail.h  multipart.cpp  vars  vcard.cpp
src/mod/man/: GNUmakefile  Makefile.am  mod_man.cpp  mod_man.h
src/mod/rtf/: GNUmakefile  Makefile.am  mod_rtf.cpp  mod_rtf.h
src/pjl/: Makefile.am  auto_delete_pool.h  auto_vec.h  char_buffer_pool.h  fdbuf.cpp  fdbuf.h  hash.cpp  hash.h  itoa.cpp  itoa.h  less.h  mmap_file.cpp  mmap_file.h  omanip.h  option_stream.cpp  option_stream.h  pattern_map.h  pjl_set.h  thread_pool.cpp  thread_pool.h  vector_adapter.h  vlq.cpp  vlq.h
swish++/branches/swish++-5.0.1/: Changes  FilterFile.h  bcd.h  (+26 more)
swish++/trunk/: AssociateMeta.h  BUGS  Changes  DirectoriesGrow.h  ExcludeClass.h  ExcludeExtension.h  ExcludeFile.c  ExcludeFile.h  ExcludeMeta.h  ExtractExtension.h  ExtractFile.c  ExtractFile.h  ExtractFilter.h  FilesGrow.c  FilesGrow.h  FilesReserve.h  FilterExtension.c  FilterFile.c  FilterFile.h  FollowLinks.h  GNUmakefile  Group.c  Group.h  INSTALL.unix  INSTALL.win32  IncludeExtension.h  IncludeFile.c  IncludeFile.h  IncludeMeta.c  IncludeMeta.h  Incremental.h  IndexFile.h  Makefile  Makefile.win32  PidFile.h  README  RecurseSubdirs.h  ResultSeparator.h  ResultsFormat.c  ResultsMax.h  (+148 more)
test/: .gitignore  Makefile.am  renew_expected.sh  run_test.sh
test/conf/: index-WordFilesMax-1.conf  index-WordFilesMax-a.conf  index-WordPercentMax-102.conf
test/data/: Gutenberg_License.txt  Raven,_The.txt  Time_Machine,_The.txt  index-Filters.conf  index-Filters.stdin  index-TitleLines-a.conf  index-WordPercentMax-0.conf  index-WordPercentMax-a.conf  info_group.rtf  search-ResultSeparator-01.conf  search-ResultSeparator-02.conf  search-ResultsFormat-bad.conf  search-ResultsFormat-classic.conf  search-ResultsFormat-xml.conf  search-text-ResultSeparator-01.conf  search-text-ResultSeparator-02.conf  search-text-ResultsFormat-classic.conf  search-text-ResultsFormat-xml.conf  table_1.rtf
test/data/html/: no_index.html
test/data/html/swishxx/: documentation.html  faq.html  features.html  index.html  to-do.html
test/data/mail/: Better_Market_Street--20151231-165358-0500.eml  Google--20150204-225722-0800.eml  Muni--20151231-160312-0600.eml  PayPal--20150915-165504-0400.eml  SFMTA--20160105-153250-0600.eml  iTunes--20140515-215725+0000.eml  icu-support--20141105-152905-0800.eml
test/expected/: index-Filters.txt  index-H.txt  index-S.txt  index-V.txt  index-html-no_index.txt  index-html-v1.txt  index-html-v2.txt  index-html-v3.txt  index-man-v1.txt  index-man-v2.txt  index-man-v3.txt  index-rtf-v1.txt  index-rtf-v2.txt  index-rtf-v3.txt  index-text-v3.txt  index-txt-v1.txt  index-txt-v2.txt  index-txt-v3.txt  search-ResultSeparator-02.txt  search-html-D.txt  search-html-no_index-01.txt  search-html-no_index-02.txt  search-man-D.txt  search-man-M.txt  search-man-meta-01.txt  search-rtf-D.txt  search-rtf-M.txt  search-rtf-rquote-01.txt  search-text-D.txt  search-text-ResultSeparator-01.txt  search-text-ResultsFormat-classic.txt  search-text-d-01.txt  search-text-m0.txt  search-text-near-02.txt  search-text-not-01.txt  search-text-w7,4.txt  search-text-w7.txt  search-text-wild-01.txt  search-txt-Fxml.txt  search-txt-S.txt  (+7 more)
test/tests/: README.md  extract-V.test  index-A-M_02.test  index-A-m_01.test  index-Filters.test  index-H.test  index-S.test  index-TitleLines-a.test  index-V.test  index-WordFilesMax-1.test  index-WordFilesMax-a.test  index-WordPercentMax-0.test  index-WordPercentMax-102.test  index-WordPercentMax-a.test  index-f1.test  index-fa.test  index-html-no_index.test  index-html-v1.test  index-html-v2.test  index-html-v3.test  index-mail-v1.test  index-mail-v2.test  index-mail-v3.test  index-man-v1.test  index-man-v2.test  index-man-v3.test  index-no_options.test  index-p0.test  index-p102.test  index-pa.test  index-rtf-v1.test  index-rtf-v2.test  index-rtf-v3.test  index-ta.test  index-text-v1.test  index-text-v2.test  index-text-v3.test  index-txt-v2.test  index-txt-v3.test  index-v5.test  (+55 more)
(+1209 files in other folders)
