##
#	SWISH++
#	src/mod/Makefile.am
#
#	Copyright (C) 1998-2015  Paul J. Lucas
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License as published by
#	the Free Software Foundation; either version 2 of the Licence, or
#	(at your option) any later version.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with this program.  If not, see <http://www.gnu.org/licenses/>.
##

SUBDIRS =

if WITH_HTML
SUBDIRS += html
endif

if WITH_ID3
SUBDIRS += id3
endif

if WITH_LATEX
SUBDIRS += latex
endif

if WITH_MAIL
SUBDIRS += mail
endif

if WITH_MAN
SUBDIRS += man
endif

if WITH_RTF
SUBDIRS += rtf
endif

# vim:set noet sw=8 ts=8:
